--- a/backend/front/src/App.css
+++ b/backend/front/src/App.css
@@ -1,5 +1,5 @@
-.App {
-  text-align: left;
+App {
+  text-align: center;
 }
 
 .App-logo {
@@ -27,7 +27,46 @@
 .App-link {
   color: #61dafb;
 }
+.wrapper {
+  display: flex;
+  align-items: stretch;
+}
 
+.my-sidebar {
+  min-height: 100vh;
+  background: #ECF0F1;
+  color: #ECF0F1;
+}
+
+.my-sidebar-expanded {
+  min-width: 200px;
+  max-width: 200px;
+}
+
+.my-sidebar-collapsed {
+  min-width: 62px;
+  max-width: 62px;
+}
+page-item.active .page-link {
+  background-color: #6c757d;
+  color: white;
+  border-color: #6c757d;
+}
+.page-link {
+  background-color: white;
+  color: #6c757d;
+  border-color: #6c757d;
+}
+.page-link:hover {
+  color: black;
+}
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
